[package]
name = "rs_mathematical_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
meval = "0.2.0"
nalgebra = "0.32.5"
regex = "1.5"

#[target.x86_64-unknown-linux-musl]
#linker = "musl-gcc"

[profile.release]
opt-level = 'z'  # 优化级别为“z”，这是最高级别的优化
lto = true       # 启用 Link-Time Optimization（LTO）
codegen-units = 1 # 将编译单元设置为1以减少可执行文件大小
