[package]
name = "rs_mathematical_tools"
version = "1.2.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
evalexpr = "11.3.0"
nalgebra = "0.32.5"
regex = "1.5"

[profile.release]
opt-level = 'z'		# 优化级别为“z”，这是最高级别的优化
lto = true		# 启用 Link-Time Optimization（LTO）
codegen-units = 1	# 将编译单元设置为1以减少可执行文件大小
panic = "abort"		# 不需要捕获 panic
