[package]
name = "rs_mathematical_tools"
version = "1.2.7"
edition = "2021"
build = "build.rs"

[dependencies]
crossterm = "0.28.1"
clap = { version = "4.0", features = ["derive"] }
evalexpr = "12.0.0"
regex = "1.5"
toml = "0.8.14"
lazy_static = "1.4"
rand = "0.8"
arboard = "3.4.0"

[profile.release]
opt-level = 'z'          # 优化级别为“z”，这是最高级别的优化
lto = true               # 启用 Link-Time Optimization（LTO）
codegen-units = 1        # 将编译单元设置为1以减少可执行文件大小
panic = "abort"          # 不需要捕获 panic
